feature:edit partner & artist details eventListing
